# ghcjs-commonjs

./: .gitignore  .travis.yml  Makefile  README.md  circle.yml  ghcjs-commonjs.cabal  stack.yaml
README/: README.cabal  package.json  stack.yaml
README/js/: index.js
README/src/: Main.hs
example-react-serverside-rendering/: example-react-serverside-rendering.cabal
examples/: .#ghcjs-require.js  HaskellFromNode.hs  HaskellFromNode.js  Main.hs  Main.js  Makefile  README.md  build-and-run.sh  ghcjs-loader.js  ghcjs-register.js  ghcjs-require.js
examples/JavaScript/EventEmitter/: Internal.hs
examples/failure/: Main.hs  README.md  ghcjs-commonjs-failure.cabal  index.js  package.json
examples/fibonacci/: Main.hs  README.md  ghcjs-commonjs-fibonacci.cabal  index.js
examples/fibonacci/hello-world/: Main.hs  README.md  ghcjs-commonjs-hello-world.cabal
examples/ghcjs-loader/: ghcjs-loader.js  package.json
examples/ghcjs-loader-test/: Main.hs  Makefile  package.json  webpack.config.js
examples/ghcjs-loader-test/src/: index.js
examples/hello-variable-name/: Main.hs  README.md  ghcjs-commonjs-hello-variable-name.cabal  index.js  package.json
examples/hello-variable-name/hello-world/: index.js
examples/hello-world/: Main.hs  README.md  index.js
examples/pandoc/: Makefile  README.md  ghcjs-commonjs-pandoc.cabal  index.html  node-main.js  package.json  stack.yaml
examples/pandoc/hs/: Main.hs
examples/pandoc/js/: index.js
examples/react-pandoc/: ghcjs-commonjs-webpack.cabal  package.json  stack.yaml  webpack.config.js
examples/react-pandoc/js/: index.js
examples/webpack/: README.md  ghcjs-commonjs-webpack.cabal  package.json
examples/webpack/hs/: Main.hs
ghcjs-commonjs/: .gitignore  LICENSE  README.md  ghcjs-commonjs.cabal
ghcjs-commonjs/src/GHCJS/: CommonJS.hs
ghcjs-commonjs/src/GHCJS/CommonJS/: Internal.hs
ghcjs-loader/: ghcjs-loader.js  package.json
ghcjs-register/: ghcjs-register.js  package.json
ghcjs-require/: ghcjs-require.js  package.json
old-examples/: .gitignore  EventEmitter.hs  HaskellFromNode-with-ghcjs-register.js  HaskellFromNode.hs  Makefile  NodeFromHaskell.hs  ghcjs-loader.js
old-examples/GHCJS/: Require.hs
old-examples/JavaScript/: EventEmitter.hs
old-examples/ghcjs-loader/: ghcjs-register.js  ghcjs-require.js
old-examples/ghcjs-loader-test/: package.json  webpack.config.js
old-examples/ghcjs-loader-test/src/: babel-version.es6.js
test/: Makefile  ghcjs-commonjs-test.cabal  stack.yaml
test/test/: TypeCheckSpec.hs
