name:                ghcjs-commonjs
version:             0.1.0.0
synopsis:            Better Haskell & JavaScript Interop with CommonJS for GHCJS
homepage:            https://github.com/beijaflor-io/ghcjs-commonjs
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ghcjs-commonjs
  main-is: Main.hs
  build-depends:  base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
