name:                example-react-serverside-rendering
version:             0.1.0.0
synopsis:            An example for ghcjs-commonjs
homepage:            https://github.com/beijaflor-io/ghcjs-commonjs
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example-react-serverside-rendering
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
