name:                ghcjs-commonjs
version:             0.1.0.0
synopsis:            Better Haskell & JavaScript Interop with CommonJS for GHCJS
homepage:            https://github.com/beijaflor-io/ghcjs-commonjs
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: GHCJS.CommonJS
                 , JavaScript.EventEmitter
                 , JavaScript.EventEmitter.Internal
  build-depends:  base >=4.8 && <4.9
                , containers >= 0.5.6.3
                , ghcjs-base
  hs-source-dirs:      src
  default-language:    Haskell2010
