name:                ghcjs-commonjs-hello-variable-name
version:             0.1.0.0
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ghcjs-commonjs-hello-world
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , ghcjs-commonjs
  default-language:    Haskell2010
