name:                ghcjs-commonjs-pandoc
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ghcjs-commonjs-pandoc
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , ghcjs-commonjs
                     , pandoc
  hs-source-dirs:      hs
  default-language:    Haskell2010
